[package]
name = "crypto"
version = "0.1.0"
edition = "2021"
authors = ["Neo <lanqing.ji@foxmail.com>"]
description = "An encryption algorithm library written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = {version = "0.4.4", features = ["rand"]}
num-integer = "0.1.45"
num-primes = "0.3.0"
num-traits = "0.2.17"
rand = "0.8.5"

[profile.dev]                                                                                                                    
overflow-checks = false
