[package]
name = "cryptolib"
version = "0.1.3"
edition = "2021"
authors = ["Neo <lanqing.ji@foxmail.com>"]
description = "An encryption algorithm library written in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kthreadd/cryptolib"
keywords = ["Hash","AES","Automotive","Encryption","HSM"]
categories = ["cryptography", "algorithms"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[profile.dev]                                                                                                                    
overflow-checks = false
